# microblog

./: .gitignore  pyproject.toml
src/: .flaskenv  config.py  microblog.py
src/app/: base.html  forms.py  models.py  routes.py
src/app/templates/: _post.html  base.html  index.html  login.html  register.html  user.html
src/migrations/versions/: 5cbdac33582a_posts_table.py  830e91fd239a_users_table.py
