[tool.poetry]
name = "megablog"
version = "0.1.0"
description = ""
authors = ["Felipe Lopez <felipe@nogson.com>"]
readme = "README.md"
packages = [{include = "megablog", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
