[tool.poetry]
name = "megablog"
version = "0.1.0"
description = ""
authors = ["Felipe Lopez <felipe@nogson.com>"]
readme = "README.md"
packages = [{include = "megablog", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
flask-wtf = "^1.2.1"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-shell-ipython = "^0.5.1"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
